--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "3.3.4",
     "@reduxjs/toolkit": "2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.51.4",
     "react-redux": "9.1.2",
-    "wouter": "3.1.2"
+    "wouter": "3.1.2",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
