--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.51.4",
     "react-redux": "9.1.2",
+    "sonner": "1.4.41",
     "wouter": "3.1.2",
     "yup": "1.4.0"
   },
